--- a/src/features/pagination/components/Pagination.module.scss
+++ b/src/features/pagination/components/Pagination.module.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'pagination-variables';
 @import 'extends';
 @import 'mixins';
 
@@ -17,7 +17,9 @@
   align-items: center;
   width: 100%;
   max-width: 45rem;
-  transition: right 0.2s ease, left 0.2s ease;
+  transition:
+    right 0.2s ease,
+    left 0.2s ease;
 }
 
 .arrow {
