Pagination big update
- Pagination component refactored
- New PagesNav component instead of Pages
- New PageArrow component instead of PageArrowL and PageArrowR
- PageLink component refactored
- Context refactored
- New UsePaginationService instead of useGetPages
- Pages navigation and url manipulation logic changed and placed into the UsePaginationService
- Styles refactored

--- a/src/features/pagination/scss/_pagination-variables.scss
+++ b/src/features/pagination/scss/_pagination-variables.scss
@@ -1,8 +1,6 @@
 $font-size-pagination-arrow: 3rem;
 $font-size-pagination-arrow--t: 2.5rem;
-$font-size-pagination-arrow--t-sm: 2rem;
 
-$color-navPage: #fff;
-$color-navPage--hover: rgb(194, 194, 194);
-$background-color-navPageItem--active: rgba(156, 131, 54, 0.8);
-$border-radius-navPage: 50%;
+$color-navpage--hover: rgb(194, 194, 194);
+$background-color-navpage--active: rgba(156, 131, 54, 0.8);
+$border-radius-navpage: 50%;
