--- a/src/features/search-bar/components/SearchBar.module.scss
+++ b/src/features/search-bar/components/SearchBar.module.scss
@@ -2,18 +2,12 @@
 @import 'variables';
 @import 'extends';
 
-.search-bar {
+.searchbar {
   @extend %flex-center;
-  height: 100%;
-
-  &__form {
-    @extend %flex-center;
-    justify-self: center;
-    width: 100%;
-    max-width: 64rem;
-    overflow: hidden;
-    border-radius: 10rem 15rem;
-  }
+  width: 100%;
+  max-width: 64rem;
+  overflow: hidden;
+  border-radius: 10rem 15rem;
 
   &__item {
     padding: 1.2rem 3rem;
