--- a/src/layouts/Header.module.scss
+++ b/src/layouts/Header.module.scss
@@ -9,6 +9,9 @@
   background-color: $background-color-main;
 
   &__content {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
     width: 100%;
     max-width: 160rem;
     margin: 0 auto;
@@ -45,7 +48,18 @@
 
 @include tablet-sm() {
   .header {
-    padding: 0 1rem;
+    width: 100%;
+    height: 6rem;
+    padding: 0 2rem;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+
+    &__content {
+      align-items: center;
+    }
   }
 }
 
